<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/check_master_layout"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorBlue_grey_app"/>
        <LinearLayout
            android:orientation="horizontal" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_grey_50">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:alpha="0.8"
                android:paddingLeft="-12dp"
                android:src="@drawable/side_item_orange" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="-22dp"
                android:alpha="0.85"
                android:src="@drawable/stent_emtransito" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/check_codcli_txtvw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:autoSizeMaxTextSize="22sp"
                        android:autoSizeMinTextSize="18sp"
                        android:autoSizeStepGranularity="2sp"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="65465"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="15dp"
                        android:autoSizeMaxTextSize="22sp"
                        android:autoSizeMinTextSize="18sp"
                        android:autoSizeStepGranularity="2sp"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text=" - "
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/check_cliente_txtvw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="15dp"
                        android:autoSizeMaxTextSize="22sp"
                        android:autoSizeMinTextSize="18sp"
                        android:autoSizeStepGranularity="2sp"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="sans-serif-condensed-light"
                        android:maxLines="3"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="7dp"
                        android:autoSizeMaxTextSize="22sp"
                        android:autoSizeMinTextSize="18sp"
                        android:autoSizeStepGranularity="2sp"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="NF: "
                        android:textColor="@color/light_bg_dark_primary_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/check_nf_txtvw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="7dp"
                        android:autoSizeMaxTextSize="22sp"
                        android:autoSizeMinTextSize="18sp"
                        android:autoSizeStepGranularity="2sp"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="456456465"
                        android:textColor="@color/light_bg_dark_primary_text"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:autoSizeMaxTextSize="22sp"
                    android:autoSizeMinTextSize="18sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/notas_status_emconferencia"
                    android:textColor="@color/blue_700"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorGrey_app"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/plate_rect"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/conferencia_start_title"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="normal"/>

            <Button
                android:id="@+id/check_start_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:background="@color/colorGrey_app"
                android:scaleType="fitXY"
                android:text="@string/conferencia_button_start"/>
            <Button
                android:id="@+id/check_btn_perfeito"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@color/colorGrey_app"
                android:scaleType="fitXY"
                android:text="@string/conferencia_button_per"/>

            <Button
                android:id="@+id/check_btn_dev"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@color/colorGrey_app"
                android:scaleType="fitXY"
                android:text="@string/conferencia_button_dev"/>
            <Button
                android:id="@+id/check_btn_rentrega"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@color/colorGrey_app"
                android:scaleType="fitXY"
                android:text="Re-entrega"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/check_recorder_replace"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
